--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.contain {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.head {
+  display: flex;
+  flex-direction: row;
+  background-color: #20558A;
+  padding-inline: 20px;
+}
+
+.head img {
+  width: 70px;
+  height: 70px;
+  align-self: center;
+}
+
+.head h1 {
+  margin-left: 50px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  border-left: 2px solid #20558A;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content h2 {
+  color: #5C3D20;
+}
+
+.content p1 {
+  color: #000000;
+  font-weight: bold;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+}
+
+.right {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-self: start;
+  align-items: start;
+  width: auto;
+  height: auto;
+  padding: 20px;
+}
+
+.leftnav {
+  height: 100%;
+  background-color: #20558A;
+  width: 10px;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  border: 0px solid black;
+  background-color: #D9D9D9;
+  padding: 8px;
+  border-radius: 30px;
+  margin: 25px;
+  width: 50vw;
+  gap: 10px;
+}
+
+.search input {
+  border: none;
+  outline: none;
+  background-color: #D9D9D9;
+  font-weight: bold;
+  color: black;
+}
+
+.associated {
+  border-bottom: 6px solid #20558A;
+  margin-bottom: 40px;
+}
+
+.associated h1 {
+  margin-bottom: 40px;
+  color: #5C3D20;
+}
+
+.link {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
 }
