--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,19 @@
   display: flex;
   flex-direction: row;
   background-color: #20558A;
-  padding-inline: 20px;
+  padding-inline: 70px;
 }
 
 .head img {
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: auto;
   align-self: center;
 }
 
 .head h1 {
-  margin-left: 50px;
+  margin-left: 40px;
   color: white;
+  font-size: 2rem;
 }
 
 .content {
@@ -28,15 +29,22 @@
   justify-content: center;
   gap: 20px;
   border-left: 2px solid #20558A;
+  padding-inline: 70px;
 }
 
 .content h2 {
   color: #5C3D20;
+  font-size: 1.5rem;
 }
 
 .content p1 {
   color: #000000;
   font-weight: bold;
+  font-size: 1rem;
+}
+.content p {
+  color: #000000;
+  font-size: 0.9rem;
 }
 
 .left {
@@ -62,18 +70,6 @@
   width: 10px;
 }
 
-.search {
-  display: flex;
-  align-items: center;
-  border: 0px solid black;
-  background-color: #D9D9D9;
-  padding: 8px;
-  border-radius: 30px;
-  margin: 25px;
-  width: 50vw;
-  gap: 10px;
-}
-
 .search input {
   border: none;
   outline: none;
@@ -90,10 +86,12 @@
 .associated h1 {
   margin-bottom: 40px;
   color: #5C3D20;
+  font-size: 1.4rem;
 }
 
 .link {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 20px;
 }
