--- a/src/footter.css
+++ b/src/footter.css
@@ -1,38 +1,35 @@
 .containfootter {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    height: 50%;
+    width: auto;
+    height: auto;
     background-color: #20558A;
-    padding: 25px;
+    padding: 15px;
 }
 
 .leftfootter {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 10%;
     border-right: 1px solid white;
 }
 
 .leftfootter img {
-    width: 150px;
-    height: 150px;
+    width: 4rem;
+    height: auto;
 }
 
 .centerfootter {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 70%;
+    width: auto;
     color: white;
-    padding-left: 50px;
+    padding-left: 20px;
 }
-
-
 .centerfootter img {
-    width: 30px;
-    height: 30px;
+    width: 1rem;
+    height: 1rem;
     filter: invert(1);
     margin-right: 10px;
 }
@@ -46,8 +43,11 @@
 .face{
     display: flex;
     flex-direction: row;
+    width: fit-content;
+    height: fit-content;
 }
 .facebook{
     display: flex;
     align-items: center;
+    width: fit-content;
 }
